// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Global style renders with a DARK theme 1`] = `
<head>
  <style
    data-styled=""
    data-styled-version="4.1.3"
  >
    
    
/* sc-component-id: sc-global-1470103548 */
body{background:#222222;font-family:'Karla',sans-serif;margin:0;padding:0;} #root{-webkit-box-pack:start;-webkit-justify-content:start;-ms-flex-pack:start;justify-content:start;max-width:640px;margin:auto;padding:0 1rem 3rem;} @media (min-width:769px){#root{-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between;padding:0 0 3rem;}} .fixed{height:375px;}
  </style>
</head>
`;

exports[`Global style renders with a LIGHT theme 1`] = `
<head>
  <style
    data-styled=""
    data-styled-version="4.1.3"
  >
    
    
/* sc-component-id: sc-global-1470103548 */
body{background:#FFFFFF;font-family:'Karla',sans-serif;margin:0;padding:0;} #root{-webkit-box-pack:start;-webkit-justify-content:start;-ms-flex-pack:start;justify-content:start;max-width:640px;margin:auto;padding:0 1rem 3rem;} @media (min-width:769px){#root{-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between;padding:0 0 3rem;}} .fixed{height:375px;}
  </style>
</head>
`;
